# finagle

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 6d8cd3ed4143_initial_tables.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routers/: imports.py  reports.py  transactions.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  transaction.py  user.py
app/schemas/: import_result.py  report.py  transaction.py  user.py
app/services/: cgt_service.py  import_service.py  transaction_service.py  user_service.py
app/services/parsers/: __init__.py  native.py  pearler.py  sharesight.py
frontend/: README.md
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Export.tsx  Home.tsx  Import.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
templates/: stock_transactions.csv
tests/: conftest.py  test_cgt.py  test_imports.py  test_security.py  test_transactions.py  test_users.py
